orchest-k8s-ref/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - invest.tessaract.io
        - flower.tessaract.io
      secretName: orchest-tls
  rules:
    - host: invest.tessaract.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: investment-web
                port:
                  number: 8088
    - host: flower.tessaract.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: investment-flower
                port:
                  number: 5555
